Entity rendering work to #1 - Remove intended iter shift to avoid confusion - Map response cleanup - Add safe return to entity - Changed navigational elements and small css changes in entity - Add container id - Started work on js rendering element (incomplete)

--- a/docs/css/entity.css
+++ b/docs/css/entity.css
@@ -5,7 +5,6 @@
 body {
     flex: auto;
     width: 100%;
-    display: flexbox;
     align-items: center;
     justify-content: center;
     background-color: oklch(0.185 0 0);
@@ -13,8 +12,6 @@ body {
     background-repeat: repeat;
     overflow: scroll;
 }
-
-/* TODO Make this content holographic. */
 
 .cardWrapper {
     display: flexbox;
